base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    kubevirt.io/name: database
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
