base/winweb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  selector:
    env: webapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
