base/winweb-route.yaml
apiVersion: v1
kind: Route
metadata:
  name: route-webapp
spec:
  path: /
  to:
    name: webapp
    weight: 100
    kind: Service
  host: ''
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: 80
  alternateBackends: []
